// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`restore history from history fallback with redirect before enter 1`] = `
Object {
  "basename": "",
  "direction": "forward",
  "entries": Array [
    Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "key": "345678",
        "pathname": "/redirected",
        "search": "",
        "url": "/redirected",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "REDIRECTED",
    },
    Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "key": "345678",
        "pathname": "/third",
        "search": "",
        "url": "/third",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "THIRD",
    },
  ],
  "from": Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/",
            "search": "",
            "url": "/",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "FIRST",
        },
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/second",
            "search": "",
            "url": "/second",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "SECOND",
        },
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/third",
            "search": "",
            "url": "/third",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "THIRD",
        },
      ],
      "index": 0,
      "key": "345678",
      "kind": "load",
      "length": 3,
      "pathname": "/",
      "pop": false,
      "scene": "",
      "search": "",
      "status": 200,
      "url": "/",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "FIRST",
  },
  "hash": "",
  "index": 0,
  "key": "345678",
  "kind": "load",
  "length": 3,
  "params": Object {},
  "pathname": "/redirected",
  "pop": false,
  "prev": Object {
    "basename": "",
    "direction": "backward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/",
          "search": "",
          "url": "/",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/third",
          "search": "",
          "url": "/third",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "THIRD",
      },
    ],
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "back",
    "length": 3,
    "params": Object {},
    "pathname": "/second",
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "type": "SECOND",
    "url": "/second",
  },
  "query": Object {},
  "ready": true,
  "scene": "",
  "search": "",
  "state": Object {},
  "status": 302,
  "type": "REDIRECTED",
  "universal": false,
  "url": "/redirected",
}
`;

exports[`restore history from history fallback with redirect before enter 2`] = `
Object {
  "history": Object {
    "entries": Array [
      Object {
        "basename": "",
        "key": "345678",
        "state": Object {},
        "url": "/redirected",
      },
      Object {
        "basename": "",
        "key": "345678",
        "state": Object {},
        "url": "/second",
      },
      Object {
        "basename": "",
        "key": "345678",
        "state": Object {},
        "url": "/third",
      },
    ],
    "index": 0,
  },
  "id": "345678",
  "key": "345678",
  "state": Object {},
}
`;

exports[`restore history from history fallback with redirect before enter 3`] = `
Object {
  "history": Object {
    "entries": Array [
      Object {
        "basename": "",
        "key": "345678",
        "state": Object {},
        "url": "/redirected",
      },
      Object {
        "basename": "",
        "key": "345678",
        "state": Object {},
        "url": "/second",
      },
      Object {
        "basename": "",
        "key": "345678",
        "state": Object {},
        "url": "/third",
      },
    ],
    "index": 1,
  },
  "id": "345678",
  "key": "345678",
  "state": Object {},
}
`;

exports[`restore history from history fallback with redirect before enter 4`] = `
Object {
  "history": Object {
    "entries": Array [
      Object {
        "basename": "",
        "key": "345678",
        "state": Object {},
        "url": "/redirected",
      },
      Object {
        "basename": "",
        "key": "345678",
        "state": Object {},
        "url": "/second",
      },
      Object {
        "basename": "",
        "key": "345678",
        "state": Object {},
        "url": "/third",
      },
    ],
    "index": 2,
  },
  "id": "345678",
  "key": "345678",
  "state": Object {},
}
`;

exports[`restore history from history fallback with redirect before enter 5`] = `
Object {
  "history": Object {
    "entries": Array [
      Object {
        "basename": "",
        "key": "345678",
        "state": Object {},
        "url": "/redirected",
      },
      Object {
        "basename": "",
        "key": "345678",
        "state": Object {},
        "url": "/second",
      },
      Object {
        "basename": "",
        "key": "345678",
        "state": Object {},
        "url": "/third",
      },
      Object {
        "basename": "",
        "key": "345678",
        "state": Object {},
        "url": "/redirected",
      },
    ],
    "index": 3,
  },
  "id": "345678",
  "key": "345678",
  "state": Object {},
}
`;

exports[`restore history from history fallback with redirect before enter:  - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/redirected",
      "search": "",
      "url": "/redirected",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "REDIRECTED",
  },
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/second",
      "search": "",
      "url": "/second",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "SECOND",
  },
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/third",
      "search": "",
      "url": "/third",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "THIRD",
  },
]
`;

exports[`restore history from history fallback with redirect before enter:  - history_entries 2`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/redirected",
      "search": "",
      "url": "/redirected",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "REDIRECTED",
  },
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/second",
      "search": "",
      "url": "/second",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "SECOND",
  },
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/third",
      "search": "",
      "url": "/third",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "THIRD",
  },
]
`;

exports[`restore history from history fallback with redirect before enter:  - history_index 1`] = `1`;

exports[`restore history from history fallback with redirect before enter:  - history_index 2`] = `2`;

exports[`restore history from history fallback with redirect before enter:  - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/redirected",
          "search": "",
          "url": "/redirected",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "REDIRECTED",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/third",
          "search": "",
          "url": "/third",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "THIRD",
      },
    ],
    "from": null,
    "index": 1,
    "key": "345678",
    "kind": "next",
    "length": 3,
    "pathname": "/second",
    "pop": true,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/redirected",
            "search": "",
            "url": "/redirected",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "REDIRECTED",
        },
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/second",
            "search": "",
            "url": "/second",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "SECOND",
        },
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/third",
            "search": "",
            "url": "/third",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "THIRD",
        },
      ],
      "hash": "",
      "index": 0,
      "key": "345678",
      "kind": "load",
      "length": 3,
      "params": Object {},
      "pathname": "/redirected",
      "pop": false,
      "query": Object {},
      "ready": true,
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 302,
      "type": "REDIRECTED",
      "url": "/redirected",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/second",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "SECOND",
}
`;

exports[`restore history from history fallback with redirect before enter:  - response 2`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/redirected",
          "search": "",
          "url": "/redirected",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "REDIRECTED",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/third",
          "search": "",
          "url": "/third",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "THIRD",
      },
    ],
    "from": null,
    "index": 2,
    "key": "345678",
    "kind": "next",
    "length": 3,
    "pathname": "/third",
    "pop": true,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/redirected",
            "search": "",
            "url": "/redirected",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "REDIRECTED",
        },
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/second",
            "search": "",
            "url": "/second",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "SECOND",
        },
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/third",
            "search": "",
            "url": "/third",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "THIRD",
        },
      ],
      "hash": "",
      "index": 1,
      "key": "345678",
      "kind": "next",
      "length": 3,
      "params": Object {},
      "pathname": "/second",
      "pop": true,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "SECOND",
      "url": "/second",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/third",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "THIRD",
}
`;

exports[`restore history from history fallback with redirect before enter:  - routes - FIRST - beforeEnter 1`] = `1`;

exports[`restore history from history fallback with redirect before enter:  - routes - FIRST - beforeEnter 2`] = `1`;

exports[`restore history from history fallback with redirect before enter:  - routes - FIRST - thunk 1`] = `0`;

exports[`restore history from history fallback with redirect before enter:  - routes - FIRST - thunk 2`] = `0`;

exports[`restore history from history fallback with redirect before enter:  - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`restore history from history fallback with redirect before enter:  - routes - NEVER_USED_PATHLESS - thunk 2`] = `0`;

exports[`restore history from history fallback with redirect before enter:  - routes - REDIRECTED - onComplete 1`] = `1`;

exports[`restore history from history fallback with redirect before enter:  - routes - REDIRECTED - onComplete 2`] = `1`;

exports[`restore history from history fallback with redirect before enter:  - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/redirected",
          "search": "",
          "url": "/redirected",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "REDIRECTED",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/third",
          "search": "",
          "url": "/third",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "THIRD",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "next",
    "length": 3,
    "params": Object {},
    "pathname": "/second",
    "pop": true,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/redirected",
            "search": "",
            "url": "/redirected",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "REDIRECTED",
        },
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/second",
            "search": "",
            "url": "/second",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "SECOND",
        },
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/third",
            "search": "",
            "url": "/third",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "THIRD",
        },
      ],
      "hash": "",
      "index": 0,
      "key": "345678",
      "kind": "load",
      "length": 3,
      "params": Object {},
      "pathname": "/redirected",
      "pop": false,
      "query": Object {},
      "ready": true,
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 302,
      "type": "REDIRECTED",
      "url": "/redirected",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second",
  },
  "title": "SECOND",
}
`;

exports[`restore history from history fallback with redirect before enter:  - state 2`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/redirected",
          "search": "",
          "url": "/redirected",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "REDIRECTED",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/third",
          "search": "",
          "url": "/third",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "THIRD",
      },
    ],
    "from": null,
    "hash": "",
    "index": 2,
    "key": "345678",
    "kind": "next",
    "length": 3,
    "params": Object {},
    "pathname": "/third",
    "pop": true,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/redirected",
            "search": "",
            "url": "/redirected",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "REDIRECTED",
        },
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/second",
            "search": "",
            "url": "/second",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "SECOND",
        },
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/third",
            "search": "",
            "url": "/third",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "THIRD",
        },
      ],
      "hash": "",
      "index": 1,
      "key": "345678",
      "kind": "next",
      "length": 3,
      "params": Object {},
      "pathname": "/second",
      "pop": true,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "SECOND",
      "url": "/second",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "THIRD",
    "universal": false,
    "url": "/third",
  },
  "title": "THIRD",
}
`;

exports[`restore history from history fallback with redirect before enter:  - title 1`] = `"SECOND"`;

exports[`restore history from history fallback with redirect before enter:  - title 2`] = `"THIRD"`;

exports[`restore history from history fallback with redirect before enter: {"type":"FIRST"} - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/redirected",
      "search": "",
      "url": "/redirected",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "REDIRECTED",
  },
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/second",
      "search": "",
      "url": "/second",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "SECOND",
  },
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/third",
      "search": "",
      "url": "/third",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "THIRD",
  },
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/redirected",
      "search": "",
      "url": "/redirected",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "REDIRECTED",
  },
]
`;

exports[`restore history from history fallback with redirect before enter: {"type":"FIRST"} - history_index 1`] = `3`;

exports[`restore history from history fallback with redirect before enter: {"type":"FIRST"} - response 1`] = `
Object {
  "payload": "redirect_complete",
  "type": "REDIRECTED_COMPLETE",
}
`;

exports[`restore history from history fallback with redirect before enter: {"type":"FIRST"} - routes - FIRST - beforeEnter 1`] = `2`;

exports[`restore history from history fallback with redirect before enter: {"type":"FIRST"} - routes - FIRST - thunk 1`] = `0`;

exports[`restore history from history fallback with redirect before enter: {"type":"FIRST"} - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`restore history from history fallback with redirect before enter: {"type":"FIRST"} - routes - REDIRECTED - onComplete 1`] = `2`;

exports[`restore history from history fallback with redirect before enter: {"type":"FIRST"} - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/redirected",
          "search": "",
          "url": "/redirected",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "REDIRECTED",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/third",
          "search": "",
          "url": "/third",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "THIRD",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/redirected",
          "search": "",
          "url": "/redirected",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "REDIRECTED",
      },
    ],
    "from": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "direction": "forward",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "location": Object {
              "key": "345678",
              "pathname": "/redirected",
              "search": "",
              "url": "/redirected",
            },
            "params": Object {},
            "query": Object {},
            "state": Object {},
            "type": "REDIRECTED",
          },
          Object {
            "basename": "",
            "hash": "",
            "location": Object {
              "key": "345678",
              "pathname": "/second",
              "search": "",
              "url": "/second",
            },
            "params": Object {},
            "query": Object {},
            "state": Object {},
            "type": "SECOND",
          },
          Object {
            "basename": "",
            "hash": "",
            "location": Object {
              "key": "345678",
              "pathname": "/third",
              "search": "",
              "url": "/third",
            },
            "params": Object {},
            "query": Object {},
            "state": Object {},
            "type": "THIRD",
          },
          Object {
            "basename": "",
            "hash": "",
            "location": Object {
              "key": "345678",
              "pathname": "/",
              "search": "",
              "url": "/",
            },
            "params": Object {},
            "query": Object {},
            "state": Object {},
            "type": "FIRST",
          },
        ],
        "index": 3,
        "key": "345678",
        "kind": "push",
        "length": 4,
        "pathname": "/",
        "pop": false,
        "scene": "",
        "search": "",
        "status": 200,
        "url": "/",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "hash": "",
    "index": 3,
    "key": "345678",
    "kind": "replace",
    "length": 4,
    "params": Object {},
    "pathname": "/redirected",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/redirected",
            "search": "",
            "url": "/redirected",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "REDIRECTED",
        },
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/second",
            "search": "",
            "url": "/second",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "SECOND",
        },
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/third",
            "search": "",
            "url": "/third",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "THIRD",
        },
      ],
      "hash": "",
      "index": 2,
      "key": "345678",
      "kind": "next",
      "length": 3,
      "params": Object {},
      "pathname": "/third",
      "pop": true,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "THIRD",
      "url": "/third",
    },
    "query": Object {},
    "ready": true,
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 302,
    "type": "REDIRECTED",
    "universal": false,
    "url": "/redirected",
  },
  "title": "REDIRECTED_COMPLETE - \\"redirect_complete\\"",
}
`;

exports[`restore history from history fallback with redirect before enter: {"type":"FIRST"} - title 1`] = `"REDIRECTED"`;
